--- a/socialchatfront/WebContent/index.html
+++ b/socialchatfront/WebContent/index.html
@@ -218,10 +218,10 @@ body {
 								class="dropdown-toggle" data-toggle="dropdown" href="">Friends<span
 									class="caret"></span></a>
 								<ul class="dropdown-menu">
-									<li><a href="#!myAccFrnds">Friends</a></li>
+									<li><a href="#!ShowFriendList">Friends</a></li>
 									<li><a href="#!suggestedFriends"><i
 											class="glyphicon glyphicon-user"></i>Suggested Friends</a></li>
-									<li><a href="#!frndReqRcvd">Pending Friend
+									<li><a href="#!ShowPendingFriendRequestList">Pending Friend
 											Requests</a></li>
 								</ul></li>
 							<!-- Friend END -->
@@ -235,7 +235,7 @@ body {
 									<li ng-show="currentUser.role=='ROLE_ADMIN'"><a href="#!Job">Create new job opportunity</a></li>
 									<li><a href="#!ViewJobs">View Jobs</a></li>
 									<li><a href="#!AppliedJobs">Applied Jobs</a></li>
-									<li><a href="#!ManageBlog">Manage Jobs</a></li>
+									
 								</ul></li>
 							<!-- Blogs END -->
 							
