--- a/socialchatfront/WebContent/C_Job/SingleJob.html
+++ b/socialchatfront/WebContent/C_Job/SingleJob.html
@@ -29,3 +29,24 @@
 							</tbody>
 						</table>
 					</form>
+					<div align="center">
+	<div class="card" style="width:600px;min-height:630px;padding:0px;border:1px solid black;">
+ 	 <h4 style="background-color:powderblue;padding:10px;" align="center" class="card-title"><b>Job Application Form</b></h4><br>
+    	<p align="center" style="padding:0;"><img class="card-img-top" src="b4gjobs.png" alt="Card image" style="width:150px;height:100px;"></p>
+    	<div style="text-align:left;" class="card-body">
+    		<form>
+				
+				<div style="text-align:center;" class="form-group">
+				<H1>Are You Sure To Apply For The Job</H1>
+					<button type="button" ng-click="applyJobs()" class="btn btn-lg btn-primary">Apply</button>		
+				</div>			
+			</form> 
+	
+		</div>
+	</div>
+</div>
+	
+	
+	
+	
+	</div>
