Profile Friend JobDone

--- a/socialchatfront/WebContent/C_Friend/ShowPendingFriendRequestList.html
+++ b/socialchatfront/WebContent/C_Friend/ShowPendingFriendRequestList.html
@@ -7,7 +7,7 @@
 <td>
  	<img src="http://localhost:8078/socialchatmiddle/showPendingFriendRequest/getImage/{{friend.loginname}}" width="40" height="40"/>
 </td>
- <td>{{friend.loginName}}</td>
+ <td>{{friend.friendloginname}}</td>
  <td>
  <button class="btn btn-info" ng-click="acceptfriend(friend)">Accept</button>
  <button class="btn btn-danger" ng-click="unfriend(friend)">UnFriend</button>
