--- a/socialchatfront/WebContent/C_Job/AppliedJobs.html
+++ b/socialchatfront/WebContent/C_Job/AppliedJobs.html
@@ -1,38 +1,37 @@
-<div style="margin:0;" class="container" ng-Controller="JobController">
-<br>
-<div style="float:center;">
-	<div class="card" style="width:1500px;margin:0;min-height:300px;padding:0px;border:1px solid black;">
- 	 <h4 style="background-color:powderblue;padding:10px;" align="center" class="card-title"><b>My Job Applications</b></h4>
- 	 <p align="center" style="padding:0;"><img class="card-img-top" src="b4gjobs.png" alt="Card image" style="width:150px;height:100px;"></p>
-    	<div class="card-body">
-    		  <table class="table table-bordered">
-    <thead style="background-color:cyan;">
-      <tr style="text-align:center;">
-      	<th style="width:10px;">Application ID</th>
-      	<th style="width:20px;">Applied Date</th>
-        <th style="width:150px;">Job ID</th>
-        <th style="width:250px;">Loginname</th>
-        <th style="width:150px;">Company</th>
-        <th style="width:250px;">Designation</th>
-        </tr>
-    </thead>
-    <tbody ng-repeat="applyJob in listApplyJob" ng-show="currentUser.loginName == applyJob.loginName">
-      <tr style="text-align:center;">
-      	<td>{{applyJob.applicationId}}</td>
-      	<td>{{applyJob.appliedDate}}</td>
-      	<td>{{applyJob.jobId}}</td>
-      	<td>{{applyJob.loginName}}</td>
-      	<td>{{applyJob.company}}</td>
-      	<td>{{applyJob.jobDesignation}}</td>
-      </tr>
-    </tbody>
-  </table>
+<div style="margin: 0;" class="container" ng-Controller="JobController">
+	<br>
+	<div style="float: center;">
+		<div class="card"
+			style="width: 1500px; margin: 0; min-height: 300px; padding: 0px; border: 1px solid black;">
+			<h4 align="center" class="card-title">
+				<b>My Job Applications</b>
+			</h4>
+
+			<div class="card-body">
+				<table class="table table-bordered">
+					<thead>
+						<tr style="text-align: center;">
+							<th style="width: 10px;">Application ID</th>
+							<th style="width: 20px;">Applied Date</th>
+							<th style="width: 150px;">Job ID</th>
+							<th style="width: 250px;">Loginname</th>
+							<th style="width: 150px;">Company</th>
+							<th style="width: 250px;">Designation</th>
+						</tr>
+					</thead>
+					<tbody ng-repeat="applyJob in listApplyJob">
+						<tr style="text-align: center;">
+							<td>{{applyJob.appliationId}}</td>
+							<td>{{applyJob.appliedDate | date:"dd MM yyyy"}}</td>
+							<td>{{applyJob.jobId}}</td>
+							<td>{{applyJob.loginName}}</td>
+							<td>{{applyJob.company}}</td>
+							<td>{{applyJob.jobDesignation}}</td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
 		</div>
+
 	</div>
-  		 
-</div>
-
-
-
-
 </div>
