--- a/socialchatfront/WebContent/C_Blog/SingleBlog.html
+++ b/socialchatfront/WebContent/C_Blog/SingleBlog.html
@@ -25,8 +25,8 @@
 					</button>
 
 				</div>
-				<br /> <span style="color: #0000FF">Created On : </span>{{singleBlogData.createdDate| date:"dd MM yyyy"}}
-				<br />
+				<br /> <span style="color: #0000FF">Created On : </span>{{singleBlogData.createdDate|
+				date:"dd MM yyyy"}} <br />
 				<button class="btn" value="LIKES"
 					ng-click="incrementLike(singleBlogData.blogId)">
 					<i class="glyphicon glyphicon-thumbs-up"></i>
