--- a/socialchatfront/WebContent/C_Blog/viewBlog.html
+++ b/socialchatfront/WebContent/C_Blog/viewBlog.html
@@ -20,7 +20,8 @@
 					<button class="btn btn-info" ng-click="editBlog(blog.blogId)">
 						<i class="fa fa-edit"></i>
 					</button>
-					<button class="btn"  ng-show="currentUser.role=='ROLE_ADMIN'" ng-click="deleteBlog(blog.blogId)">
+					<button class="btn" ng-show="currentUser.role=='ROLE_ADMIN'"
+						ng-click="deleteBlog(blog.blogId)">
 						<i class="fa fa-trash"></i>
 					</button>
 				</div>
