--- a/socialchatfront/WebContent/C_Forum/ViewForums.html
+++ b/socialchatfront/WebContent/C_Forum/ViewForums.html
@@ -20,7 +20,8 @@
 					<button class="btn btn-info" ng-click="editForum(forum.forumId)">
 						<i class="fa fa-edit"></i>
 					</button>
-					<button class="btn"  ng-show="currentUser.role=='ROLE_ADMIN'" ng-click="deleteForum(forum.forumId)">
+					<button class="btn" ng-show="currentUser.role=='ROLE_ADMIN'"
+						ng-click="deleteForum(forum.forumId)">
 						<i class="fa fa-trash"></i>
 					</button>
 				</div>
