--- a/socialchatfront/WebContent/C_User/Login.html
+++ b/socialchatfront/WebContent/C_User/Login.html
@@ -35,7 +35,7 @@ body {
 	margin: 5% auto;
 	width: 500px;
 	height: 400px;
-	 background: #E6E6FA; 
+	background: #E6E6FA;
 	border-radius: 2px;
 	box-shadow: 0 2px 4px rgba(255, 0, 0, 0.4);
 }
@@ -119,8 +119,8 @@ input[type="submit"]:active {
 							<form role="form">
 								<div class="form-group">
 
-									<label for="loginName"> User Name </label> <input
-										type="text" autocomplete="userName" ng-model="user.loginName"
+									<label for="loginName"> User Name </label> <input type="text"
+										autocomplete="userName" ng-model="user.loginName"
 										class="form-control" id="loginName">
 								</div>
 								<div class="form-group">
