--- a/socialchatfront/WebContent/C_User/UpdateProfile.html
+++ b/socialchatfront/WebContent/C_User/UpdateProfile.html
@@ -45,8 +45,9 @@ body {
 									name="file" id="image">
 							</div>
 							<br> <br>
-							<button style="font-size: 15px" type="submit"
-							onclick=""window.location.href='ViewProfile.html'"	class="btn btn-primary">Upload Profile Picture</button>
+							<button style="font-size: 15px" type="submit" onclick=""
+								window.location.href='ViewProfile.html'
+								"	class="btn btn-primary">Upload Profile Picture</button>
 						</div>
 					</form>
 				</div>
