--- a/socialchatfront/WebContent/C_User/ViewProfile.html
+++ b/socialchatfront/WebContent/C_User/ViewProfile.html
@@ -167,12 +167,14 @@
 		<div class="card hovercard">
 			<div class="card-background">
 				<img class="card-bkimg" alt=""
-					src="http://localhost:8078/socialchatmiddle/getImage/{{currentUser.loginName}}" onerror=this.src="avatar.png"  style="height: 50px; width: 60px">
+					src="http://localhost:8078/socialchatmiddle/getImage/{{currentUser.loginName}}"
+					onerror=this.src= "avatar.png"  style="height: 50px; width: 60px">
 				<!-- http://lorempixel.com/850/280/people/9/ -->
 			</div>
 			<div class="useravatar">
 				<img alt="avatar"
-					src="http://localhost:8078/socialchatmiddle/getImage/{{currentUser.loginName}}" onerror=this.src="avatar.png"  style="height: 50px; width: 60px">
+					src="http://localhost:8078/socialchatmiddle/getImage/{{currentUser.loginName}}"
+					onerror=this.src= "avatar.png"  style="height: 50px; width: 60px">
 			</div>
 			<div class="card-info">
 				<span class="card-title" style="color: darkblue">{{user.userName}}</span>
