--- a/socialchatfront/WebContent/C_Friend/suggestedFriends.html
+++ b/socialchatfront/WebContent/C_Friend/suggestedFriends.html
@@ -1,16 +1,18 @@
 <div class="container" ng-controller="FriendController">
-<table width="80%" align="center" cellspacing="4">
-<tr bgcolor="blue">
-<td colspan="3"><font size="5" color="white">Suggested Friend List</font></td>
-</tr>
-<tr bgcolor="silver" ng-repeat="friend in showSuggestedFriendList">
-<td>
- 	<img src="http://localhost:8078/socialchatmiddle/getImage/{{friend.loginName}}" width="40" height="40"/>
-</td>
- <td>{{friend.loginName}}</td>
- <td>
- <button class="btn btn-info" ng-click="sendFriendRequest(friend)">Send Request</button>
- </td>
- </tr>
-</table>
+	<table width="80%" align="center" cellspacing="4">
+		<tr bgcolor="blue">
+			<td colspan="3"><font size="5" color="white">Suggested
+					Friend List</font></td>
+		</tr>
+		<tr bgcolor="silver" ng-repeat="friend in showSuggestedFriendList">
+			<td><img
+				src="http://localhost:8078/socialchatmiddle/getImage/{{friend.loginName}}"
+				width="40" height="40" /></td>
+			<td>{{friend.loginName}}</td>
+			<td>
+				<button class="btn btn-info" ng-click="sendFriendRequest(friend)">Send
+					Request</button>
+			</td>
+		</tr>
+	</table>
 </div>
