--- a/socialchatfront/WebContent/C_User/Register.html
+++ b/socialchatfront/WebContent/C_User/Register.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html>
+
+<!DOCTYPE html>
 <html>
 <head>
 <meta charset="ISO-8859-1">
@@ -24,7 +25,7 @@ body {
 	margin: 4% auto;
 	width: 500px;
 	height: 600px;
-	background: #F8F8FF	;
+	background: #F8F8FF;
 	border-radius: 2px;
 	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
 }
