--- a/socialchatfront/WebContent/home.html
+++ b/socialchatfront/WebContent/home.html
@@ -30,22 +30,21 @@ body {
 		<div id="carousel-demo" class="carousel slide" data-ride="carousel">
 			<div class="carousel-inner">
 				<div class="item">
-					<img src="banner1.jpg" alt="banner2"/>
+					<img src="banner1.jpg" alt="banner2" />
 				</div>
 				<div class="item">
-					<img src="banner2.jpg" alt="banner2"/>
+					<img src="banner2.jpg" alt="banner2" />
 				</div>
 				<div class="item">
-					<img src="banner3.jpg" alt="banner3"/>
+					<img src="banner3.jpg" alt="banner3" />
 				</div>
 				<div class="item active">
 					<img src="banner2.jpg" alt="banner2">
 				</div>
 
 			</div>
-			Next / Previous controls here
-			<a class="left carousel-control" href="#carousel-demo"
-				data-slide="prev"> <span
+			Next / Previous controls here <a class="left carousel-control"
+				href="#carousel-demo" data-slide="prev"> <span
 				class="glyphicon glyphicon-chevron-left"></span>
 			</a> <a class="right carousel-control" href="#carousel-demo"
 				data-slide="next"> <span
