--- a/socialchatfront/WebContent/index.html
+++ b/socialchatfront/WebContent/index.html
@@ -305,8 +305,7 @@ body {
 									</ul></li>
 								<li><img id="img1"
 									src="http://localhost:8078/socialchatmiddle/getImage/{{currentUser.loginName}}"
-									alt="avatar" onerror=this.src=
-									"avatar.png" style="height: 50px; width: 60px"></li>
+									alt="avatar" onerror=this.src="avatar.png" style="height: 50px; width: 60px"></li>
 
 							</ul>
 						</div>
