--- a/socialchatfront/WebContent/C_Chat/chat.html
+++ b/socialchatfront/WebContent/C_Chat/chat.html
@@ -46,7 +46,7 @@ body {
 		<div class="jumbotron">
 			<p ng-repeat="message in messages" color="lightblue">
 				<span> <img
-					src="http://localhost:8078/socialchatmiddle/getImage/{{currentUser.loginName}}"
+					src="avatar.png"
 					width="20" height=20 " onerror=this.src=
 					"avatar.png" style="height: 50px; width: 60px" /> <font
 					color="black" face="Comic Sans MS"> {{message.message}} </font>
@@ -58,3 +58,4 @@ body {
 	</div>
 </body>
 </html>
+	
