--- a/socialchatfront/WebContent/C_Friend/ShowFriendList.html
+++ b/socialchatfront/WebContent/C_Friend/ShowFriendList.html
@@ -1,21 +1,18 @@
 <div class="container" ng-controller="FriendController">
-	<table width="80%" align="center">
-		<tr bgcolor="blue">
-			<td colspan="3"><font size="5" color="white">Friend List</font></td>
-		</tr>
-		<tr bgcolor="silver" ng-repeat="friend in showFriendList">
-			<td><img ng-hide="friend.friendloginname==currentUser.loginName"
-				src="http://localhost:8078/socialchatmiddle/getImage/{{friend.friendloginname}}"
-				width="40" height="40" /> <img
-				ng-hide="friend.loginname==currentUser.loginname"
-				src="http://localhost:8078/socialchatmiddle//getImage/{{friend.loginName}}"
-				width="40" height="40" /></td>
-			<td><span
-				ng-hide="friend.friendloginname==currentUser.loginName">{{friend.friendloginname}}</span>
-				<span ng-hide="friend.loginName==currentUser.loginName">{{friend.loginName}}</span>
-			</td>
-			<td><button class="btn btn-danger" ng-click="unfriend(friend)">UnFriend</button>
-			</td>
-		</tr>
-	</table>
+<table width="80%" align="center">
+<tr bgcolor="blue">
+<td colspan="3"><font size="5" color="white">Friend List</font></td>
+</tr>
+<tr bgcolor="silver" ng-repeat="friend in showFriendList">
+<td>
+ 	<img ng-hide="friend.friendloginname==currentUser.loginName" src="http://localhost:8078/socialchatmiddle/getImage/{{friend.friendloginname}}" width="40" height="40"/>
+ 	<img ng-hide="friend.loginName==currentUser.loginName" src="http://localhost:8078/socialchatmiddle/getImage/{{friend.loginName}}" width="40" height="40"/>
+ </td>
+ <td>
+ <span ng-hide="friend.friendloginname==currentUser.loginName">{{friend.friendloginname}}</span>
+ <span ng-hide="friend.loginName==currentUser.loginName">{{friend.loginName}}</span>
+ </td>
+ <td><button class="btn btn-danger" ng-click="unfriend(friend)">UnFriend</button>
+ </td></tr>
+</table>
 </div>
