--- a/socialchatfront/WebContent/C_Friend/ShowPendingFriendRequestList.html
+++ b/socialchatfront/WebContent/C_Friend/ShowPendingFriendRequestList.html
@@ -1,18 +1,17 @@
 <div class="container" ng-controller="FriendController">
-	<table width="80%" align="center">
-		<tr bgcolor="blue">
-			<td colspan="3"><font size="5" color="white">Friend List</font></td>
-		</tr>
-		<tr bgcolor="silver"
-			ng-repeat="friend in showPendingFriendRequestList">
-			<td><img
-				src="http://localhost:8078/socialchatmiddle/getImage/{{friend.loginname}}"
-				width="40" height="40" /></td>
-			<td>{{friend.friendloginname}}</td>
-			<td>
-				<button class="btn btn-info" ng-click="acceptfriend(friend)">Accept</button>
-				<button class="btn btn-danger" ng-click="unfriend(friend)">UnFriend</button>
-			</td>
-		</tr>
-	</table>
+<table width="80%" align="center">
+<tr bgcolor="blue">
+<td colspan="3"><font size="5" color="white">Friend List</font></td>
+</tr>
+<tr bgcolor="silver" ng-repeat="friend in showPendingFriendRequestList">
+<td>
+ 	<img src="http://localhost:8078/socialchatmiddle/getImage/{{friend.loginName}}" width="40" height="40"/>
+</td>
+ <td>{{friend.loginName}}</td>
+ <td>
+ <button class="btn btn-info" ng-click="acceptfriend(friend)">Accept</button>
+ <button class="btn btn-danger" ng-click="unfriend(friend)">UnFriend</button>
+ </td>
+ </tr>
+</table>
 </div>
